welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: type mismatch;
 found   : Unit
 required: Boolean
    case (a,b,false) => if ((a <0) & (b<0)) {return false} ; if ((a >0) & (b>0)) {return false} ;
                                                             ^